update car bitMask

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "string": "c",
         "system_error": "c",
         "thread": "c",
-        "sstream": "c"
+        "sstream": "c",
+        "array": "c"
     }
 }
