total restart(i'm stupid)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "system_error": "c",
         "thread": "c",
         "sstream": "c",
-        "array": "c"
+        "array": "c",
+        "random": "c"
     }
 }
